--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "kinoko-takenoko-wars",
-  "version": "0.0.1",
-  "description": "きのこ vs たけのこ ========",
-  "main": "app.js",
+  "name": "79school",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:hachi-eiji/79school-2.git"
-  },
-  "author": "Eiji Hachiya",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hachi-eiji/79school-2/issues"
-  },
-  "homepage": "https://github.com/hachi-eiji/79school-2",
   "dependencies": {
-    "express": "^4.10.6",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "express": "~4.9.0",
+    "jade": "~1.6.0",
     "mongoskin": "^1.4.4",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1"
   },
   "devDependencies": {
