--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "github": "^0.2.3",
     "jade": "~1.6.0",
+    "marked": "^0.3.2",
     "mongoskin": "^1.4.4",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "socket.io": "^1.2.1"
+    "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
