--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "express-session": "^1.9.3",
     "github": "^0.2.3",
     "jade": "~1.6.0",
     "marked": "^0.3.2",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "superagent": "^0.21.0"
   }
 }
