--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.3",
     "dateformat": "^1.0.11",
     "debug": "~2.0.0",
+    "domain": "0.0.1",
     "express": "~4.9.0",
     "express-session": "^1.9.3",
     "github": "^0.2.3",
