--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "dateformat": "^1.0.11",
