--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.9.3",
     "github": "^0.2.3",
     "jade": "~1.6.0",
+    "log4js": "^0.6.21",
     "marked": "^0.3.2",
     "mongoose": "^3.8.20",
     "morgan": "~1.3.0",
