--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "~1.8.1",
+    "connect-mongo": "^0.5.3",
     "cookie-parser": "~1.3.3",
     "dateformat": "^1.0.11",
     "debug": "~2.0.0",
