--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "jsdoc": "jsdoc -d ./docs/ libs/*.js routes/*.js"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
+    "jsdoc": "^3.3.0-alpha13",
     "mocha": "^2.0.1",
     "superagent": "^0.21.0"
   }
