--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "jsdoc": "jsdoc -d ./docs/ libs/*.js routes/*.js"
+    "jsdoc": "jsdoc -d ./docs/ libs/*.js routes/*.js",
+    "test" : "mocha --recursive tests/"
   },
   "dependencies": {
     "async": "^0.9.0",
