--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "jsdoc": "jsdoc -d ./docs/ libs/*.js routes/*.js",
-    "test" : "mocha --recursive tests/"
+    "test": "mocha --recursive tests/"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -14,11 +14,11 @@
     "cookie-parser": "~1.3.3",
     "dateformat": "^1.0.11",
     "debug": "~2.0.0",
-    "domain": "0.0.1",
     "express": "~4.9.0",
     "express-session": "^1.9.3",
     "github": "^0.2.3",
     "jade": "~1.6.0",
+    "lodash": "^3.0.0",
     "log4js": "^0.6.21",
     "marked": "^0.3.2",
     "mongoose": "^3.8.20",
