fix branch name
not use regex

--- a/circle.yml
+++ b/circle.yml
@@ -24,6 +24,6 @@ dependencies:
       #    - npm test
 deployment:
   feature:
-    branch: /master/
+    branch: master
     commands:
       - fab -f sh/fabfile deploy
