--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expect.js": "^0.3.1",
     "jsdoc": "^3.3.0-alpha13",
     "mocha": "^2.0.1",
+    "nock": "^0.59.1",
     "superagent": "^0.21.0"
   }
 }
