--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "jsdoc": "^3.3.0-alpha13",
     "mocha": "^2.0.1",
     "nock": "^0.59.1",
-    "superagent": "^0.21.0",
-    "tsd": "^0.5.7"
+    "superagent": "^0.21.0"
   }
 }
