--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lodash": "^3.0.0",
     "log4js": "^0.6.21",
     "marked": "^0.3.2",
-    "mongoose": "^3.8.20",
+    "mongoose": "~3.8.20",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3"
   },
