--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "jsdoc": "jsdoc -d ./docs/ libs/*.js routes/*.js",
-    "pretest": "gulp compile-typescript",
+    "pretest": "gulp clean:typescript && gulp compile:typescript",
     "test": "mocha --recursive tests/"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "coffee-script": "^1.9.2",
+    "del": "^1.1.1",
     "expect.js": "^0.3.1",
     "gulp": "^3.8.11",
     "gulp-coffee": "^2.3.1",
@@ -36,6 +37,7 @@
     "jsdoc": "^3.3.0-alpha13",
     "mocha": "^2.0.1",
     "nock": "^0.59.1",
-    "superagent": "^0.21.0"
+    "superagent": "^0.21.0",
+    "vinyl-paths": "^1.0.0"
   }
 }
