--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "test": "mocha --recursive tests/"
   },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^1.4.2",
     "body-parser": "~1.8.1",
-    "connect-mongo": "^0.5.3",
-    "cookie-parser": "~1.3.3",
+    "connect-mongo": "^0.8.2",
+    "cookie-parser": "~1.4.0",
     "dateformat": "^1.0.11",
     "debug": "~2.0.0",
-    "express": "~4.9.0",
-    "express-session": "^1.9.3",
-    "github": "^0.2.3",
-    "jade": "~1.6.0",
-    "lodash": "^3.0.0",
-    "log4js": "^0.6.21",
+    "express": "~4.13.3",
+    "express-session": "^1.11.3",
+    "github": "^0.2.4",
+    "jade": "~1.11.0",
+    "lodash": "^3.10.1",
+    "log4js": "^0.6.27",
     "marked": "^0.3.2",
-    "mongoose": "^3.8.20",
-    "morgan": "~1.3.0",
+    "mongoose": "^4.1.8",
+    "morgan": "~1.6.1",
     "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "jsdoc": "^3.3.0-alpha13",
-    "mocha": "^2.0.1",
-    "nock": "^0.59.1",
-    "superagent": "^0.21.0"
+    "jsdoc": "^3.3.3",
+    "mocha": "^2.3.3",
+    "nock": "^2.13.0",
+    "superagent": "^1.4.0"
   }
 }
