--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "jsdoc": "jsdoc -d ./docs/ libs/*.js routes/*.js",
-    "test": "mocha --recursive tests/"
+    "test": "mocha --require intelli-espower-loader --recursive tests/"
   },
   "dependencies": {
     "async": "^1.4.2",
@@ -27,10 +27,12 @@
     "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
+    "espower-loader": "^1.0.0",
+    "intelli-espower-loader": "^1.0.0",
     "jsdoc": "^3.3.3",
     "mocha": "^2.3.3",
     "nock": "^2.13.0",
+    "power-assert": "^1.0.1",
     "superagent": "^1.4.0"
   }
 }
