--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "serve-favicon": "~2.1.3"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.3",
+    "eslint": "^1.5.1",
+    "eslint-config-airbnb": "0.0.9",
     "espower-loader": "^1.0.0",
     "intelli-espower-loader": "^1.0.0",
     "jsdoc": "^3.3.3",
