--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "jsdoc": "jsdoc -d ./docs/ libs/*.js routes/*.js",
-    "test": "mocha --require intelli-espower-loader --recursive tests/"
+    "test": "mocha --require intelli-espower-loader --recursive tests/",
+    "eslint": "eslint libs/** models/** routes/** tests/**"
   },
   "dependencies": {
     "async": "^1.4.2",
